-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
DB Integration & Observability
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
DocumentSourceMerge::serialize doesn't anonymize the database, collection, and field names in its into and on parameters. It looks like we need to update document_source_merge.idl to specify options for serializing the query shape. (see document_source_out.idl for an example)
- is depended on by
-
SERVER-85111 Tracking: Known M2 correctness bugs
-
- Closed
-
- is related to
-
SERVER-76326 Scrutinize DocumentSource parsers for representative query round-tripping
-
- Closed
-