SERVER-81920 Anonymizes fields in $merge for query shape serialization