src/mongo/db/pipeline/document_source_merge.cpp
@@ -353,15 +353,15 @@ boost::optional<DocumentSource::DistributedPlanLogic> DocumentSourceMerge::distr
 Value DocumentSourceMerge::serialize(const SerializationOptions& opts) const {
     DocumentSourceMergeSpec spec;
     spec.setTargetNss(getOutputNs());
+    const auto& letVariables = _mergeProcessor->getLetVariables();
     spec.setLet([&]() -> boost::optional<BSONObj> {
-        const auto& letVariables = _mergeProcessor->getLetVariables();
         if (!letVariables) {
             return boost::none;
         }
 
         BSONObjBuilder bob;
         for (auto&& [name, expr] : *letVariables) {
-            bob << name << expr->serialize(opts);
+            bob << opts.serializeFieldPathFromString(name) << expr->serialize(opts);
         }
         return bob.obj();
     }());
@@ -376,8 +376,8 @@ Value DocumentSourceMerge::serialize(const SerializationOptions& opts) const {
             auto expCtxWithLetVariables = pExpCtx->copyWith(pExpCtx->ns);
             if (spec.getLet()) {
                 BSONObjBuilder cleanLetSpecBuilder;
-                for (auto& elt : spec.getLet().value()) {
-                    cleanLetSpecBuilder.append(elt.fieldNameStringData(), BSONObj{});
+                for (auto&& [name, expr] : *letVariables) {
+                    cleanLetSpecBuilder.append(name, BSONObj{});
                 }
                 expCtxWithLetVariables->variables.seedVariablesWithLetParameters(
                     expCtxWithLetVariables.get(), cleanLetSpecBuilder.obj());
@@ -393,7 +393,7 @@ Value DocumentSourceMerge::serialize(const SerializationOptions& opts) const {
         return mergeOnFields;
     }());
     spec.setTargetCollectionVersion(_mergeProcessor->getCollectionPlacementVersion());
-    return Value(Document{{getSourceName(), spec.toBSON()}});
+    return Value(Document{{getSourceName(), spec.toBSON(opts)}});
 }
 
 std::pair<DocumentSourceMerge::BatchObject, int> DocumentSourceMerge::makeBatchObject(
