src/mongo/db/pipeline/document_source_merge_spec.h
@@ -62,7 +62,8 @@ struct MergeWhenMatchedPolicy {
 void mergeTargetNssSerializeToBSON(const NamespaceString& targetNss,
                                    StringData fieldName,
                                    BSONObjBuilder* bob,
-                                   const SerializationContext& sc);
+                                   const SerializationContext& sc,
+                                   const SerializationOptions& opts);
 NamespaceString mergeTargetNssParseFromBSON(boost::optional<TenantId> tenantId,
                                             const BSONElement& elem,
                                             const SerializationContext& sc);
@@ -73,7 +74,8 @@ NamespaceString mergeTargetNssParseFromBSON(boost::optional<TenantId> tenantId,
  */
 void mergeOnFieldsSerializeToBSON(const std::vector<std::string>& fields,
                                   StringData fieldName,
-                                  BSONObjBuilder* bob);
+                                  BSONObjBuilder* bob,
+                                  const SerializationOptions& opts = {});
 std::vector<std::string> mergeOnFieldsParseFromBSON(const BSONElement& elem);
 
 /**
